* string.c (String#b): Allow code range scan to happen later so   ascii_only? on a result string returns the correct value.   [ruby-core:55315] [Bug #8496]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@41092 b2dd03c8-39d4-4d8f-98ff-823fe69b080e